# rust_project

./: Cargo.toml  README.md
src/: lib_image.rs  lib_pixel.rs  main.rs  picture_P3.ppm  test.ppm
src/vieux rendu/: lib_image.rs  lib_pixel.rs  main.rs
