[package]
name = "project"
version = "0.1.0"
authors = ["Nathanaël <nat.nez.ren@gmail.com>", "Arnaud <arnaudsimon091@gmail.com>", "Soumaila <soumailafomba82@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
